Fixed comment spacing

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -153,7 +153,9 @@ input {
 #formCommentText {
     height: 96px;
 }
-#submitNewCommen {
+#submitNewComment {
     background-color: #214936;
     color: #F1E0C5;
+    align-content: center;
+    text-align: center;
 }
